--- a/exercise-10.ipynb
+++ b/exercise-10.ipynb
@@ -605,7 +605,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a396b52b5399f0b9a8ef1849450773f9",
+     "checksum": "4c9793c8a1a5aeb5bed05fbc81da3598",
      "grade": true,
      "grade_id": "cft-read-test",
      "locked": true,
@@ -625,7 +625,6 @@
     "### BEGIN TESTS\n",
     "cftpath = './data/cft.csv'\n",
     "cft_start_subjects = read_cft_start(cftpath)\n",
-    "#print(cft_start_subjects2)\n",
     "\n",
     "assert not cft_start_subjects.iloc[0,1]==180,f\"Your function is not working properly, you probably forgot to substract 5 seconds from the start time\"\n",
     "assert cft_start_subjects.iloc[3,1]==235,f\"Your function is not working properly\"\n",
@@ -819,8 +818,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
     "# d) You can visualize your previous results in boxplots with the following code\n",
     "#PLOTS aRE NOT GRADED!! THIS IS FOR YOUR OWN UNDERSTANDING :)\n",
