--- a/exercise-10.ipynb
+++ b/exercise-10.ipynb
@@ -13,6 +13,8 @@
     "implement, so don't forget to remove it before testing your code, otherwise you will always get a \"not\n",
     "implemented\" error.\n",
     "\n",
+    "You need to install required python packages before executing your codes. Simply run the block below to install it in the Colab environment of your Google account. Rerun the block when you are not sure they are properly installed.\n",
+    "\n",
     "You need to manually upload the data used in this exercise to Colab. Just create a folder 'data' and paste the respective files into this folder. Otherwise, you will get a 'File not found' error. You can find the data in StudOn.\n",
     "\n",
     "Aside from coding blocks, there are also testing blocks to check whether your implementations\n",
@@ -31,6 +33,25 @@
     "First, **restart the kernel** (in the menubar, select Kernel$\\rightarrow$Restart) and then **run all \n",
     "cells** (in the menubar, select Cell$\\rightarrow$Run All).\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas scipy==1.10 h5py==3.9.0 seaborn==0.13.2 scikit-learn==1.3.0 ipywidgets ipympl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import Widget\n",
+    "Widget.close_all()"
    ]
   },
   {
@@ -254,11 +275,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "de1052ec7a612fc96a95a33b6c1d3bde",
+     "checksum": "fc54581ac58af058c7f58dbbd54767f6",
      "grade": true,
      "grade_id": "Pan-Tompkins-Tests",
      "locked": true,
-     "points": 8,
+     "points": 4,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -287,6 +308,46 @@
     "assert np.array_equal(np.array([2209,576,5041]),squaring(np.array([47,24,71]))),f\"Your squaring is not working correctly\"\n",
     "assert np.array_equal(np.array([1,4,9,16,25,36,144]),squaring(np.array([1,2,3,4,5,6,12]))),f\"Your squaring is not working correctly\"\n",
     "\n",
+    "########## Test your moving window operator\n",
+    "assert np.array_equal(np.around([1.56666667,2.36666667,4.73333333],decimals=3),np.around(moving_window_integrator([47,24,71]),decimals=3)),f\"Your moving window operator is not working correctly\"\n",
+    "assert np.array_equal(np.around([0.03333333,0.1,0.2,0.33333333,0.5,0.7,1.1],decimals=3),np.around(moving_window_integrator([1,2,3,4,5,6,12]),decimals=3)),f\"Your moving window operator is not working correctly\"\n",
+    "\n",
+    "########## Test your group delay correction\n",
+    "padtest = np.ones(50)\n",
+    "padtest[0:10] = np.zeros(10) \n",
+    "assert np.sum(group_delay_correction(padtest)) ==26, f\"Your ecg signal has not been corrected properly (check the delay number).\"\n",
+    "assert np.sum(group_delay_correction(padtest[-24:])) ==0, f\"Your ecg signal has not been correctly zero-padded at the end (check the delay number).\"\n",
+    "\n",
+    "### END TESTS\n",
+    "\n",
+    "print(\"\\t\\t Pan Tompkins implementation is working correctly :) \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "603924c5e72e87f9b942ca71ad8c2d1a",
+     "grade": true,
+     "grade_id": "cell-fc4347b388d59c12",
+     "locked": true,
+     "points": 4,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "################## RUN THIS BLOCK TO CHECK YOUR PAN-TOMPKINS IMPLEMENTATION ##################\n",
+    "##~DO NOT MODIFY THE LINES OF CODE IN THIS BLOCK\n",
+    "\n",
+    "### BEGIN TESTS\n",
     "########## Test your moving window operator\n",
     "assert np.array_equal(np.around([1.56666667,2.36666667,4.73333333],decimals=3),np.around(moving_window_integrator([47,24,71]),decimals=3)),f\"Your moving window operator is not working correctly\"\n",
     "assert np.array_equal(np.around([0.03333333,0.1,0.2,0.33333333,0.5,0.7,1.1],decimals=3),np.around(moving_window_integrator([1,2,3,4,5,6,12]),decimals=3)),f\"Your moving window operator is not working correctly\"\n",
